2013-09-07  vaiorabbit  <vaiorabbit@twitter.com>

	* opengl_command.rb, opengl_enum.rb: Updated using latest gl.xml.

2013-09-05  vaiorabbit  <vaiorabbit@twitter.com>

	* sample/ComputeShader: Added.

2013-09-03  vaiorabbit  <vaiorabbit@twitter.com>

	* opengl_platform.rb, opengl_windows.rb: Added.

2013-08-28  vaiorabbit  <vaiorabbit@twitter.com>

	* glu.rb: Added.

2013-08-28  vaiorabbit  <vaiorabbit@twitter.com>

	* (Announce) First release.
